<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/root_padding">

    <ImageView
        android:id="@+id/ivRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clipboard_outline" />

    <ImageView
        android:id="@+id/ivCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clipboard_check_outline"
        app:tint="?colorPrimary" />

    <TextView
        android:id="@+id/tvFecha"
        style="?textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawable_margin"
        android:gravity="center"
        android:text="@string/fecha"
        app:layout_constraintStart_toEndOf="@+id/ivRecord"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHora"
        style="?textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawable_margin"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/hora"
        app:layout_constraintStart_toEndOf="@+id/ivRecord"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>